--- a/日志.md
+++ b/日志.md
@@ -1,1 +1,25 @@
 # 毕设日志
+
+==2022/4/7==
+
+## Markdown输入公式
+
+https://zhuanlan.zhihu.com/p/158156773
+
+如：函数 ${f(x)=a_nx^n+a_{n-1}x^{n-1}+a_{n-2}x^{n-2}}+\cdots$
+$$
+E = mc^2
+$$
+
+## 导弹坐标系的定义
+
+### 牵连惯性坐标系（$oxyz$）
+
+把地球视为惯性参考系，牵连惯性系相当于地心惯性坐标系（$o_ex_ey_ez_e$）平移到导弹质心
+
+
+
+
+
+
+
