--- a/日志.md
+++ b/日志.md
@@ -23,3 +23,9 @@ $$
 
 ==2022/4/17==
 
+## Git使用
+
+打开 Git Bash
+
+![image-20220417103037631](C:\Users\刘宗昊\AppData\Roaming\Typora\typora-user-images\image-20220417103037631.png)
+
