--- a/日志.md
+++ b/日志.md
@@ -29,3 +29,14 @@ $$
 
 ![image-20220417103037631](C:\Users\刘宗昊\AppData\Roaming\Typora\typora-user-images\image-20220417103037631.png)
 
+
+
+==2022/4/18==
+
+## 指针函数与函数指针
+
+https://blog.csdn.net/ameyume/article/details/8220832
+
+
+
+==2022/4/19==
